--- a/second.html
+++ b/second.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my file</title>
+
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>my version 7
-    </h1>
+    <h1>my  desiign v7 </h1>
 </body>
 </html>
